--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.3.3",
     "cookie-session": "*",
     "ejs": "*",
+    "email": "^0.2.6",
     "express": "~4.0.0",
     "express-session": "*",
     "hashids": "*",
@@ -20,7 +21,8 @@
     "mongojs": "*",
     "node-uuid": "*",
     "passport": "*",
-    "passport-local": "*"
+    "passport-local": "*",
+    "time": "^0.11.2"
   },
   "devDependencies": {
     "mocha": "*"
