--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     }
   ],
   "dependencies": {
+    "MD5": "^1.2.1",
     "body-parser": "*",
     "connect": "^3.2.0",
     "cookie-parser": "^1.3.3",
     "cookie-session": "*",
+    "crypto-js": "^3.1.4",
     "ejs": "*",
     "email": "^0.2.6",
     "express": "~4.0.0",
