Added Google Analytics. Just need to create and upload videos for each app and the portfolio will be complete.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ASL-Solo",
-  "version": "0.0.1",
+  "name": "tracingink.com",
+  "version": "1.0.1",
   "authors": [
     {
-      "name": "admin",
+      "name": "Antonio Figueroa",
       "email": "afigueroa.webdev@gmail.com"
     }
   ],
