--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect": "^3.2.0",
     "cookie-parser": "^1.3.3",
     "cookie-session": "*",
+    "cors": "^2.6.0",
     "crypto-js": "^3.1.4",
     "ejs": "*",
     "email": "^0.2.6",
