--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "dependencies": {
     "MD5": "^1.2.1",
+    "angularfire": "^1.1.1",
     "body-parser": "*",
     "connect": "^3.2.0",
     "cookie-parser": "^1.3.3",
